// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Create hosted agent applications for Microsoft Foundry. Supports greenfield projects using Microsoft Agent Framework, LangChain/LangGraph, or custom frameworks in Python or C#. Downloads starter samples from the official foundry-samples repository.
USE FOR: create agent, new agent, scaffold agent, start agent project, greenfield agent, build hosted agent, new foundry agent, create from sample, langchain agent, langgraph agent, custom agent.
DO NOT USE FOR: deploying agents (use deploy), invoking agents (use invoke), troubleshooting (use troubleshoot), creating Foundry projects (use project/create).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "applications",
    "azure",
    "build",
    "cli",
    "create",
    "creating",
    "custom",
    "deploy",
    "deploying",
    "downloads",
    "foundry",
    "foundry-samples",
    "framework",
    "frameworks",
    "from",
    "greenfield",
    "hosted",
    "invoke",
    "invoking",
    "langchain",
    "langgraph",
    "microsoft",
    "official",
    "project",
    "projects",
    "python",
    "repository",
    "sample",
    "samples",
    "scaffold",
    "start",
    "starter",
    "supports",
    "troubleshoot",
    "troubleshooting",
    "using",
  ],
  "name": "create",
}
`;

exports[`create - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "applications",
  "azure",
  "build",
  "cli",
  "create",
  "creating",
  "custom",
  "deploy",
  "deploying",
  "downloads",
  "foundry",
  "foundry-samples",
  "framework",
  "frameworks",
  "from",
  "greenfield",
  "hosted",
  "invoke",
  "invoking",
  "langchain",
  "langgraph",
  "microsoft",
  "official",
  "project",
  "projects",
  "python",
  "repository",
  "sample",
  "samples",
  "scaffold",
  "start",
  "starter",
  "supports",
  "troubleshoot",
  "troubleshooting",
  "using",
]
`;
